Edits to monoH, monotop, monob
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@187 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -769,6 +769,13 @@
 	note = "[Online; accessed 24-April-2015]"
 }
 
+@misc{ForumSVN_EW_DMV,
+	title = {{SVN repository for Madgraph input cards for model with s-channel exchange of vector mediator, for electroweak boson final states}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_DMV/}",
+	year = {2015}, 
+	note = "[Online; accessed 15-May-2015]"
+}
+
 @misc{ForumSVN_DMS,
 	title = {{SVN repository for Powheg input card for model with s-channel exchange of scalar mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
