--- a/doc/tex/SimplifiedModelsIntro.tex
+++ b/doc/tex/SimplifiedModelsIntro.tex
@@ -30,14 +30,14 @@ as qualitatively different signatures requiring new search
 strategies. While the EFT integrates out the degrees of freedom of the
 (heavy) intermediate particle, concrete ``simplified models'' with
 low-mass mediators \cite{Alves:2011wf} can describe this richer
-phenomenology. Such models can be used both to interpret mono-­X
+phenomenology. Such models can be used both to interpret mono-X
 searches and to guide the design of complementary searches for
 additional signatures. Many proposals for such models began to emerge;
 see for example
 Refs. \cite{Tait:2013,Buchmueller:2013dya,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba}.
 
 To form a consensus on the simplified models most appropriate to use,
-at the end of 2014 ATLAS and CMS organized a forum, the ATLAS-­CMS
+at the end of 2014 ATLAS and CMS organized a forum, the ATLAS-CMS
 Dark Matter Forum, whereby all interested experimenters from both
 collaborations would discuss a minimal common set of Run-2 dark matter
 interpretations with the participation of experts on theories of dark
@@ -53,7 +53,7 @@ forum. These were the goals:
 \item The matrix element implementation of the simplified models
   should be standardized, and other common technical details (order of
   the calculation, showering) harmonized as much as practical. It
-  would be desirable to have a common choice of LO/NLO, ME-­parton
+  would be desirable to have a common choice of LO/NLO, ME-parton
   shower matching and merging, factorization and renormalization
   scales for each of the simplified models. This will also lead to a
   single set of theory uncertainties, which will be easier to deal
