--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -59,8 +59,8 @@ The models considered can be divided into four categories:
  \item[Models including a contact operator, where the boson is radiated from the initial state] As depicted in
  the left diagram of Figure~\ref{fig:VPlusMET_EFT}, these models follow the nomenclature and theory
  for the EFT benchmarks commonly used by MET+X searches~\cite{Goodman:2010ku}. These models
- have been used in past experimental searches~~\cite{Khachatryan:2014rwa, Aad:2014vka,Khachatryan:2014tva, Aad:2014vka,
- ATLAS:2014wra, Aad:2013oja}, and they will not be described here.
+ have been used in past experimental searches~\cite{Khachatryan:2014rwa, Aad:2014vka,Khachatryan:2014tva, Aad:2014vka,
+ ATLAS:2014wra, Aad:2013oja}, and they will not be described here~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva,Berlin:2014cfa}.
  \item[Simplified models with a boson radiated either from the initial state or from the mediator] These models follow those
  already described in Section~\ref{subsec:MonojetLikeModels}, replacing the gluon with a boson.
  \item[Models including a contact operator, where the boson is directly coupled to DM]
