--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -109,7 +109,7 @@ present in the SM, and and it provides a mechanism to ensure that the
 models do not violate flavor constraints.  As a consequence, spin-0
 resonances exchanged in the s-channel must have Yukawa coupings to SM
 fermions. Flavor-safe models can still be constructed beyond the MFV
-assumption~\ref{Agrawal:2014aoa}, but their phenomenology is left for
+assumption~\cite{Agrawal:2014aoa}, but their phenomenology is left for
 future studies.
 %cite Dolan:2014ska? Also DM@LHC report, if out in time. 
 
