--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1280,3 +1280,31 @@
       reportNumber   = "SLAC-PUB-15704",
       SLACcitation   = "%%CITATION = ARXIV:1308.0612;%%",
 }
+@article{An:2012va,
+      author         = "An, Haipeng and Ji, Xiangdong and Wang, Lian-Tao",
+      title          = "{Light Dark Matter and $Z'$ Dark Force at Colliders}",
+      journal        = "JHEP",
+      volume         = "1207",
+      pages          = "182",
+      doi            = "10.1007/JHEP07(2012)182",
+      year           = "2012",
+      eprint         = "1202.2894",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "PI-PARTPHYS-258, UMD-DOE-ER-40762-514",
+      SLACcitation   = "%%CITATION = ARXIV:1202.2894;%%",
+}
+@article{An:2012ue,
+      author         = "An, Haipeng and Huo, Ran and Wang, Lian-Tao",
+      title          = "{Searching for Low Mass Dark Portal at the LHC}",
+      journal        = "Phys.Dark Univ.",
+      volume         = "2",
+      pages          = "50-57",
+      doi            = "10.1016/j.dark.2013.03.002",
+      year           = "2013",
+      eprint         = "1212.2221",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "EFI-12-34, PI-PARTPHYS-311",
+      SLACcitation   = "%%CITATION = ARXIV:1212.2221;%%",
+}
