--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -11,6 +11,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Effective Field Theories (EFTs) are an extremely useful tool for DM searches at the LHC. Given the current lack of indications about the nature of the DM particle and its interactions, a model independent interpretation of the collider bounds appears mandatory, especially in complementarity with the reinterpretation of the exclusion limits within a choice of simplified models, which cannot exhaust the set of possible completions of an effective Lagrangian. However EFTs must be used with caution at LHC energies, where the energy scale of the interaction is at a scale where the EFT approximation can no longer be assumed to be valid.
+
 To illustrate the problem, consider an effective interaction
 $$ (\bar\psi_{SM}\psi_{SM})(\bar\psi_{DM}\psi_{DM}) {g\over \Lambda^2}$$
 that couples SM and DM fields.   The strength of this interaction can
@@ -95,7 +96,7 @@ those which can be mapped to one or more UV-complete simplified models, such as 
 commonly used in LHC searches so far and detailed in~\cite{Goodman:2010ku}, and those
 for which no UV completion is available, such as those outlined in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}. Results for the first class
 of operators can be recast using simplified models with high mediator masses, therefore removing
-the need to explicitly generate benchmark points and provide experimental limits
+the need to explicitly simulate EFT events and provide experimental limits
 for those operators. For the second class of models, a truncation procedure 
 should be applied and the truncated results should be presented alongside 
 the naive EFT results. 
@@ -110,8 +111,7 @@ For this reason, experimental collaboration should deliver results for high-mass
 pure EFT results, and leave further reinterpretation to theorists.  
 
 We therefore recommend the addition of one point at very high mediator mass (5 TeV) to the scan, for each of the DM masses
-for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose:
-studies are ongoing for $s-$channel vector mediators. 
+for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. Studies are ongoing for $s-$channel vector mediators. 
 
 \Todo{Is this sufficient information for reinterpretation, or should we have instructions?}
 
