--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -41,7 +41,7 @@ searches and to guide the design of complementary searches for
 additional signatures. 
 
 Many proposals for such models began to emerge, for example
-Refs. \cite{Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba}
+Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:201489115014,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba}
 and, at the end of 2014, ATLAS and CMS organized a forum, the
 ATLAS-CMS Dark Matter Forum, to form a consensus with the
 participation of experts on theories of dark matter. This is the final
